--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "MIT",
   "devDependencies": {
     "cypress": "^9.3.1",
-    "cypress-file-upload": "^5.0.8"
-  }
+    "cypress-file-upload": "^5.0.8",
+    "factory": "^1.0.5",
+    "faker": "^5.5.3"
+  },
+  "dependencies": {}
 }
