--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cypress": "^9.3.1",
     "cypress-file-upload": "^5.0.8",
     "factory": "^1.0.5",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "gerador-validador-cpf": "^5.0.2"
   },
   "dependencies": {}
 }
